--- a/UitleensysteemApp/app/templates/app/signin.html
+++ b/UitleensysteemApp/app/templates/app/signin.html
@@ -13,7 +13,7 @@
         </div>
         {% endif %}
         <div class="bg-slate-900 rounded-md p-4 text-gray-300 text-center">Sign In</div>
-        <input class="bg-slate-600 rounded-md" placeholder="Username" id="username" name="username">
+        <input class="bg-slate-600 rounded-md" placeholder="Username" id="username" name="username" value="{{ username }}">
         <input class="bg-slate-600 rounded-md" placeholder="Password" id="password" name="password" type="password">
         <a href="signup"><h1 class="text-blue-600">Sign up? <u>Click here</u></h1></a>
         <input type="submit" class="bg-slate-600 rounded-md p-4 text-gray-300 text-center hover:bg-slate-800" value="Log in"></submit>
